examples/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: api-domain
  name: api-domain-destinationrules
  namespace: default
spec:
  host: api-domain
  subsets:
  - labels:
      app: api-domain
      build: "24"
      version: 1.3.2
    name: api-xpto-9-default
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
