examples/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: api-domain
  name: api-domain-virtualservice
  namespace: default
spec:
  hosts:
  - api.domain.io
  http:
  - match:
    - uri:
        regex: .+
    route:
    - destination:
        host: api-domain
        port:
          number: 5000
        subset: api-xpto-9-default
